--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-cayman
-#remote_theme: benbalter/retlab
+theme: minima
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
